--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
         <div class="w-full max-w-md bg-white p-8 rounded-[2rem] shadow-xl space-y-4">
             <div class="flex justify-between items-center mb-2">
                 <h3 id="create-title" class="text-xl font-black italic text-indigo-600 uppercase">New Post</h3>
-                <button onclick="goToMain()" class="text-gray-400 font-bold text-[10px] p-2">CLOSE</button>
+                <button onclick="window.history.back()" class="text-gray-400 font-bold text-[10px] p-2">BACK</button>
             </div>
             <select id="new-room-cat" class="w-full bg-gray-50 rounded-xl p-4 text-sm"><option value="일상/잡담">일상/잡담</option><option value="이슈/뉴스">이슈/뉴스</option><option value="연애/심리">연애/심리</option><option value="취미/문화">취미/문화</option></select>
             <input type="text" id="new-room-name" placeholder="투표 제목" class="w-full bg-gray-50 rounded-xl p-4 outline-none">
             <textarea id="new-room-desc" placeholder="설명 (선택)" rows="3" class="w-full bg-gray-50 rounded-xl p-4 text-sm outline-none resize-none"></textarea>
-            <div id="pw-field-container"><input type="password" id="new-room-pw" placeholder="삭제 및 수정 비밀번호" class="w-full bg-gray-50 rounded-xl p-4 text-sm outline-none"></div>
+            <div id="pw-field-container"><input type="password" id="new-room-pw" placeholder="삭제 및 수정 비밀번호" class="w-full bg-gray-100 rounded-xl p-4 text-sm outline-none"></div>
             <div id="options-list" class="space-y-2 pt-2"></div>
             <button id="btn-add-option" onclick="addOptionField()" class="text-[10px] text-indigo-500 font-bold uppercase p-2">+ Add Option</button>
             <button id="btn-submit-create" onclick="processCreate()" class="w-full btn-main py-4 rounded-xl font-bold text-lg clickable mt-4 shadow-md">게시글 올리기</button>
@@ -87,7 +87,7 @@
         <div class="sticky top-0 z-[100] glass p-5 flex justify-between items-center">
             <button onclick="toggleMenu()" class="p-2 font-black text-[10px]">MENU</button>
             <h2 id="current-board-name" class="text-xl font-black italic">전체보기</h2>
-            <button onclick="goToMain()" class="text-gray-400 font-bold text-[10px]">EXIT</button>
+            <button onclick="switchScreen('screen-main')" class="text-gray-400 font-bold text-[10px]">EXIT</button>
         </div>
         <div class="p-4"><input type="text" id="search-bar" oninput="renderList()" placeholder="제목 검색..." class="w-full bg-gray-100 rounded-xl py-4 px-5 text-sm outline-none"></div>
         <div id="room-list" class="p-4 space-y-4 bg-gray-50 min-h-screen"></div>
@@ -96,7 +96,8 @@
     <div id="screen-room" class="hidden min-h-screen bg-white">
         <div class="sticky top-0 z-[100] glass p-4 flex justify-between items-center bg-white">
             <div class="flex items-center space-x-2">
-                <button onclick="goToMain()" class="text-gray-400 p-2 font-black text-[10px]">← HOME</button>
+                <button id="btn-room-back" onclick="handleBack()" class="text-gray-400 p-2 font-black text-[10px]">← BACK</button>
+                <button onclick="switchScreen('screen-main')" class="text-gray-600 p-2 font-black text-[10px]">EXIT</button>
             </div>
             <button onclick="copyLink()" class="px-3 py-1 bg-indigo-50 text-indigo-600 text-[9px] font-bold rounded-full border border-indigo-100 uppercase tracking-tighter">Copy Link</button>
         </div>
@@ -135,12 +136,6 @@
 
         fetch('https://api.ipify.org?format=json').then(r => r.json()).then(d => { userIP = d.ip.replace(/\./g, '_'); });
 
-        // 첫 화면으로 강제 이동 (히스토리를 지우고 첫 화면으로 대체)
-        window.goToMain = () => {
-            const mainUrl = window.location.protocol + "//" + window.location.host + window.location.pathname;
-            window.location.replace(mainUrl);
-        };
-
         window.switchScreen = (id, skipPush = false, roomId = null) => {
             document.querySelectorAll('div[id^="screen-"]').forEach(s => s.classList.add('hidden'));
             document.getElementById(id).classList.remove('hidden');
@@ -161,8 +156,7 @@
             if (state?.screen === 'screen-room' && state.roomId) {
                 enterRoom(state.roomId, false, true);
             } else {
-                // 뒤로가기 시 무조건 첫 화면으로 대체
-                goToMain();
+                switchScreen(state?.screen || 'screen-main', true);
             }
         };
 
@@ -198,6 +192,11 @@
             navigator.clipboard.writeText(url).then(() => {
                 alert("투표 링크가 복사되었습니다!");
             });
+        };
+
+        window.handleBack = () => {
+            if (history.length > 1) window.history.back();
+            else switchScreen('screen-main');
         };
 
         window.goSearch = () => {
@@ -274,6 +273,8 @@
         window.enterRoom = (id, isFromCreate = false, skipPush = false) => {
             currentRoomId = id;
             switchScreen('screen-room', skipPush, id);
+            const backBtn = document.getElementById('btn-room-back');
+            backBtn.style.display = isFromCreate ? 'none' : 'block';
             onValue(ref(db, `rooms/${id}`), snap => {
                 const data = snap.val(); if(!data) return;
                 document.getElementById('room-display-name').innerText = data.title;
@@ -318,8 +319,9 @@
                 update(ref(db, `rooms/${currentRoomId}`), { title, category, desc, "poll/options": options }).then(() => {
                     alert("성공적으로 수정되었습니다.");
                     isEditMode = false;
-                    // 수정 완료 후 첫 화면으로 히스토리 교체
-                    goToMain();
+                    // 수정 완료 후, 뒤로가기 시 작성 폼이 안 나오게 함
+                    const newUrl = window.location.protocol + "//" + window.location.host + window.location.pathname + '?id=' + currentRoomId;
+                    window.location.replace(newUrl);
                 });
             } else {
                 const pw = document.getElementById('new-room-pw').value.trim();
@@ -329,9 +331,9 @@
                     const myIds = JSON.parse(localStorage.getItem('stay_user_created_polls') || '[]');
                     myIds.push(id);
                     localStorage.setItem('stay_user_created_polls', JSON.stringify(myIds));
-                    alert("성공적으로 등록되었습니다.");
-                    // 등록 완료 후 첫 화면으로 히스토리 교체
-                    goToMain();
+                    // 등록 완료 후, 뒤로가기 시 작성 폼이 안 나오게 함
+                    const newUrl = window.location.protocol + "//" + window.location.host + window.location.pathname + '?id=' + id;
+                    window.location.replace(newUrl);
                 });
             }
         };
@@ -378,7 +380,8 @@
                     remove(ref(db, `rooms/${currentRoomId}`)).then(() => {
                         alert("성공적으로 삭제되었습니다.");
                         closeDeleteModal();
-                        goToMain();
+                        switchScreen('screen-main');
+                        refreshData();
                     }).catch(e => alert("삭제 오류 발생"));
                 } else alert("비밀번호 불일치");
             });
