--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- FingerprintJS (카톡에서는 우회/폴백을 우선 사용) -->
+  <!-- FingerprintJS -->
   <script src="https://openfpcdn.io/fingerprintjs/v4/iife.min.js"></script>
 
-  <!-- ✅ Firebase compat (카톡 100% 클릭되게: module/import 제거) -->
+  <!-- Firebase compat -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
@@ -80,16 +80,13 @@
 
     .hp-field { position: absolute; left: -9999px; top: -9999px; opacity: 0; }
 
-    /* 카톡/인앱 클릭 안정화(선택) */
     .clickable { cursor: pointer; }
   </style>
 </head>
 
 <body>
-  <!-- 허니팟 -->
   <input type="text" id="hp_nickname" class="hp-field" tabindex="-1" autocomplete="off" />
 
-  <!-- Auth modal -->
   <div id="auth-modal">
     <div class="bg-white w-full max-w-xs p-6 rounded-[2rem] shadow-2xl space-y-4">
       <h3 id="modal-title" class="text-lg font-black text-center">확인</h3>
@@ -103,7 +100,6 @@
     </div>
   </div>
 
-  <!-- Side menu -->
   <div id="menu-overlay" onclick="toggleMenu()"></div>
   <div id="side-menu">
     <div class="p-8">
@@ -121,7 +117,6 @@
     </div>
   </div>
 
-  <!-- Screen: main -->
   <div id="screen-main" class="flex flex-col items-center justify-center h-screen space-y-8 p-6 text-center">
     <h1 class="text-7xl font-black italic tracking-tighter text-gray-900">STAY.</h1>
     <div class="grid grid-cols-1 gap-3 w-full max-w-xs">
@@ -130,7 +125,6 @@
     </div>
   </div>
 
-  <!-- Screen: create -->
   <div id="screen-create" class="hidden min-h-screen p-6 flex flex-col items-center pt-10 bg-gray-50">
     <div class="w-full max-w-md bg-white p-8 rounded-[2rem] shadow-xl space-y-4">
       <div class="flex justify-between items-center mb-2">
@@ -156,7 +150,6 @@
     </div>
   </div>
 
-  <!-- Screen: list -->
   <div id="screen-list" class="hidden min-h-screen bg-white">
     <div class="sticky top-0 z-[100] glass p-5 flex justify-between items-center">
       <button onclick="toggleMenu()" class="p-2 font-black text-[10px]">MENU</button>
@@ -169,7 +162,6 @@
     <div id="room-list" class="p-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 bg-gray-50 min-h-screen content-start"></div>
   </div>
 
-  <!-- Screen: room -->
   <div id="screen-room" class="hidden min-h-screen bg-white">
     <div class="sticky top-0 z-[100] glass p-4 flex justify-between items-center bg-white">
       <div class="flex items-center space-x-2">
@@ -200,9 +192,6 @@
   </div>
 
   <script>
-    /***********************
-     * ✅ Firebase init (compat)
-     ***********************/
     const firebaseConfig = {
       apiKey: "AIzaSyAgydW97uyDPNqs5VPZnSt5E-fytezqVO0",
       authDomain: "project-8611780166111781402.firebaseapp.com",
@@ -213,9 +202,6 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    /***********************
-     * Global state
-     ***********************/
     let currentRoomId = "";
     let allRooms = [];
     let currentCategory = "전체";
@@ -225,11 +211,8 @@
     let fpReady = false;
     let votingLock = false;
 
-    let roomListenerRef = null; // enterRoom 중복 리스너 방지
+    let roomListenerRef = null;
 
-    /***********************
-     * Helpers
-     ***********************/
     function isKakaoInApp() {
       return /KAKAOTALK/i.test(navigator.userAgent || "");
     }
@@ -256,20 +239,49 @@
       return `${d.getMonth() + 1}.${d.getDate()} ${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`;
     }
 
-    /***********************
-     * ✅ Fingerprint: 카톡에서는 0초 폴백, PC만 FP 시도
-     ***********************/
+    // ✅ (핵심) 스크롤 중엔 클릭/진입 안되게: "탭"만 인정하는 바인더
+    function bindTap(el, onTap) {
+      let sx = 0, sy = 0, moved = false, st = 0;
+
+      el.addEventListener("touchstart", (e) => {
+        const t = e.touches && e.touches[0];
+        if (!t) return;
+        sx = t.clientX; sy = t.clientY;
+        moved = false;
+        st = Date.now();
+      }, { passive: true });
+
+      el.addEventListener("touchmove", (e) => {
+        const t = e.touches && e.touches[0];
+        if (!t) return;
+        if (Math.abs(t.clientX - sx) > 10 || Math.abs(t.clientY - sy) > 10) moved = true;
+      }, { passive: true });
+
+      el.addEventListener("touchend", (e) => {
+        // 스크롤이면 무시
+        if (moved) return;
+        // 너무 길게 누른건 무시(원치 않는 터치 방지)
+        if (Date.now() - st > 600) return;
+        // 탭으로 판정되면 기본 클릭 방지 + 실행
+        e.preventDefault();
+        onTap();
+      }, { passive: false });
+
+      // 데스크탑/일반 브라우저 클릭도 지원
+      el.addEventListener("click", (e) => {
+        onTap();
+      });
+    }
+
     (async function setFingerprint() {
       try {
         if (isKakaoInApp()) {
-          // 카톡은 FP 시도 자체를 “우선” 피한다 (클릭 먹통 방지)
           myFingerprint =
             localStorage.getItem("stay_kakao_id") ||
             ("kt_" + Math.random().toString(36).slice(2, 11));
           localStorage.setItem("stay_kakao_id", myFingerprint);
           fpReady = true;
 
-          // (선택) 카톡에서도 FP가 되는 기기면 백그라운드로 한번 시도해보기 (실패해도 영향 0)
           try {
             const fp = await Promise.race([
               window.FingerprintJS.load(),
@@ -287,13 +299,11 @@
           return;
         }
 
-        // 일반 브라우저: FP 정상 사용
         const fp = await window.FingerprintJS.load();
         const result = await fp.get();
         myFingerprint = result.visitorId;
         fpReady = true;
       } catch (e) {
-        // 최후 폴백
         myFingerprint =
           localStorage.getItem("stay_fallback_id") ||
           ("fb_" + Math.random().toString(36).slice(2, 11));
@@ -302,9 +312,6 @@
       }
     })();
 
-    /***********************
-     * Navigation
-     ***********************/
     function switchScreen(id, skipPush = false, roomId = null) {
       document.querySelectorAll('div[id^="screen-"]').forEach(s => s.classList.add('hidden'));
       document.getElementById(id).classList.remove('hidden');
@@ -346,9 +353,7 @@
       }
     };
 
-    function handleBack() {
-      history.back();
-    }
+    function handleBack() { history.back(); }
     window.handleBack = handleBack;
 
     function goSearch() {
@@ -373,9 +378,6 @@
     }
     window.copyLink = copyLink;
 
-    /***********************
-     * Menu
-     ***********************/
     function toggleMenu() {
       const m = document.getElementById('side-menu');
       const o = document.getElementById('menu-overlay');
@@ -399,20 +401,13 @@
     }
     window.showMyCreatedPolls = showMyCreatedPolls;
 
-    /***********************
-     * Data sync
-     ***********************/
     const roomsRef = db.ref('rooms');
     roomsRef.on('value', (snap) => {
       const v = snap.val();
       allRooms = v ? Object.entries(v) : [];
-      // 화면이 list일 때만 렌더 강제(불필요 렌더 방지)
       if (!document.getElementById('screen-list').classList.contains('hidden')) renderList();
     });
 
-    /***********************
-     * List rendering
-     ***********************/
     function renderList() {
       const listArea = document.getElementById('room-list');
       const query = (document.getElementById('search-bar').value || "").toLowerCase().trim();
@@ -449,7 +444,7 @@
       if (currentCategory !== "실시간 핫") filtered.sort((a, b) => (b[1].createdAt || 0) - (a[1].createdAt || 0));
 
       filtered.forEach(([id, room]) => {
-        const totalVotes = sumVotesFromOptions(room?.poll?.options); // ✅ 상세페이지와 동일 기준
+        const totalVotes = sumVotesFromOptions(room?.poll?.options);
         const timeText = room.createdAt ? getTimeAgo(room.createdAt) : "오래전";
 
         const isHot = (getHotScore(room) > 0.1 || topHotIds.includes(id)) && totalVotes > 0;
@@ -459,8 +454,9 @@
 
         const div = document.createElement('div');
         div.className = "vote-card bg-white p-6 rounded-[2rem] shadow-sm clickable hover:ring-2 hover:ring-indigo-500";
-        div.addEventListener("click", () => enterRoom(id, false));
-        div.addEventListener("touchend", (e) => { e.preventDefault(); enterRoom(id, false); }, { passive: false });
+
+        // ✅ 기존 touchend(스크롤 시 오작동) 제거하고, 탭만 진입하도록 변경
+        bindTap(div, () => enterRoom(id, false));
 
         div.innerHTML =
           `<div class="flex justify-between items-start mb-3">
@@ -477,14 +473,10 @@
     }
     window.renderList = renderList;
 
-    /***********************
-     * Enter room
-     ***********************/
     function enterRoom(id, isFromCreate = false, skipPush = false) {
       currentRoomId = id;
       switchScreen('screen-room', skipPush, id);
 
-      // 이전 리스너 제거
       if (roomListenerRef) roomListenerRef.off();
       roomListenerRef = db.ref(`rooms/${id}`);
 
@@ -499,7 +491,6 @@
         const timeText = data.createdAt ? `${formatExactDate(data.createdAt)} (${getTimeAgo(data.createdAt)})` : "오래전";
         document.getElementById('room-display-date').innerText = `POSTED ON ${timeText}`;
 
-        // ✅ 구버전 votedIPs가 문자열로 들어가 있는 데이터 방어 + 총합 일치
         const safeVotedIPs = (data.votedIPs && typeof data.votedIPs === "object") ? data.votedIPs : {};
         renderPoll(data.poll || {}, safeVotedIPs);
 
@@ -516,8 +507,9 @@
       recs.forEach(([id, room]) => {
         const d = document.createElement('div');
         d.className = "bg-gray-50 p-5 rounded-2xl clickable border border-gray-100 hover:bg-white hover:ring-1 hover:ring-indigo-200 transition-all";
-        d.addEventListener("click", (e) => { e.stopPropagation(); enterRoom(id, false); });
-        d.addEventListener("touchend", (e) => { e.preventDefault(); e.stopPropagation(); enterRoom(id, false); }, { passive: false });
+
+        // ✅ 여기서도 스크롤 중 오작동 방지
+        bindTap(d, () => enterRoom(id, false));
 
         d.innerHTML =
           `<div class="text-[8px] font-black text-indigo-400 uppercase mb-1">${room.category || '일상/잡담'}</div>
@@ -526,9 +518,6 @@
       });
     }
 
-    /***********************
-     * Create / Edit / Delete
-     ***********************/
     function openCreateScreen(skipPush = false) {
       isEditMode = false;
       document.getElementById('create-title').innerText = "New Post";
@@ -585,8 +574,6 @@
       if (!hasOption) return alert("최소 한 개의 선택지가 필요합니다.");
 
       if (isEditMode) {
-        // 수정: 기존 투표수 유지하려면 options 업데이트 정책이 필요하지만,
-        // 현재는 "선택지 재정의" 정책. (원하면 기존 count 유지 버전으로 바꿔줄게)
         db.ref(`rooms/${currentRoomId}`).update({
           title, category, desc,
           poll: { options }
@@ -605,7 +592,7 @@
       db.ref(`rooms/${id}`).set({
         title, pw, desc, category,
         poll: { options },
-        votedIPs: {},  // ✅ 처음부터 object로 보장
+        votedIPs: {},
         createdAt: Date.now(),
         creatorFingerprint: myFingerprint
       }).then(() => {
@@ -614,9 +601,6 @@
     }
     window.processCreate = processCreate;
 
-    /***********************
-     * Auth modal (edit/delete)
-     ***********************/
     function openAuthModal(type) {
       const modal = document.getElementById('auth-modal');
       const input = document.getElementById('modal-pw-input');
@@ -654,7 +638,6 @@
           document.getElementById('new-room-desc').value = data.desc || "";
           document.getElementById('new-room-cat').value = data.category || "일상/잡담";
 
-          // 수정 모드에서는 비번 입력칸 숨김(원하면 유지 가능)
           document.getElementById('pw-field-container').style.display = "none";
 
           document.getElementById('options-list').innerHTML = "";
@@ -684,13 +667,6 @@
       });
     }
 
-    /***********************
-     * ✅ Poll rendering + 투표 트랜잭션 (카톡 100% 클릭)
-     * - onclick 대신 addEventListener
-     * - touchend도 같이
-     * - votedIPs 문자열 구버전 자동 정상화
-     * - totalVotes는 options 합산 기준으로 완전 일치
-     ***********************/
     function renderPoll(poll, votedIPs) {
       const area = document.getElementById('poll-display-area');
       area.innerHTML = "";
@@ -702,8 +678,7 @@
       const myVote = (myFingerprint && safeVotedIPs) ? safeVotedIPs[myFingerprint] : null;
 
       Object.entries(options).forEach(([label, count]) => {
-        // (원래 네 코드에 있던 필터 유지)
-        if (label === "괜찮다") return;
+        // ✅ 버그1 수정: "괜찮다"를 숨기던 코드를 제거함 (이제 괜찮다/안괜찮다 둘 다 보임)
 
         const per = total === 0 ? 0 : Math.round((Number(count) / total) * 100);
 
@@ -712,7 +687,6 @@
           `relative h-16 rounded-2xl overflow-hidden bg-gray-50 border border-gray-100 mb-3 clickable ` +
           `${myVote === label ? 'ring-2 ring-indigo-500 bg-white shadow-md' : ''}`;
 
-        // 카톡 인앱: click이 씹히는 케이스가 있어서 touchend도 같이 등록
         const handler = async (e) => {
           if (e) e.preventDefault?.();
           if (!isSecureAccess()) return;
@@ -726,28 +700,22 @@
             await roomRef.transaction((roomData) => {
               if (!roomData) return roomData;
 
-              // ✅ 구버전 votedIPs 문자열 방어: 무조건 object로
               if (!roomData.votedIPs || typeof roomData.votedIPs !== "object") roomData.votedIPs = {};
               if (!roomData.poll) roomData.poll = {};
               if (!roomData.poll.options || typeof roomData.poll.options !== "object") roomData.poll.options = {};
 
               const currentChoice = roomData.votedIPs[myFingerprint];
 
-              // 1) 토글 취소
               if (currentChoice === label) {
                 roomData.poll.options[label] = Math.max(0, (Number(roomData.poll.options[label]) || 0) - 1);
                 delete roomData.votedIPs[myFingerprint];
-              }
-              // 2) 선택 이동
-              else if (currentChoice) {
+              } else if (currentChoice) {
                 if (roomData.poll.options[currentChoice] !== undefined) {
                   roomData.poll.options[currentChoice] = Math.max(0, (Number(roomData.poll.options[currentChoice]) || 0) - 1);
                 }
                 roomData.poll.options[label] = (Number(roomData.poll.options[label]) || 0) + 1;
                 roomData.votedIPs[myFingerprint] = label;
-              }
-              // 3) 신규 투표
-              else {
+              } else {
                 roomData.poll.options[label] = (Number(roomData.poll.options[label]) || 0) + 1;
                 roomData.votedIPs[myFingerprint] = label;
               }
@@ -763,6 +731,7 @@
           }
         };
 
+        // 투표 버튼은 스크롤 오작동 이슈가 덜해서 기존 click+touchend 유지 (카톡 클릭 안정)
         div.addEventListener("click", handler);
         div.addEventListener("touchend", handler, { passive: false });
 
@@ -784,9 +753,6 @@
       });
     }
 
-    /***********************
-     * HTML escape
-     ***********************/
     function escapeHtml(str) {
       return String(str)
         .replaceAll("&", "&amp;")
@@ -796,11 +762,7 @@
         .replaceAll("'", "&#039;");
     }
 
-    /***********************
-     * Boot: URL param 처리
-     ***********************/
     (function boot() {
-      // 기본 옵션 2개 세팅 (처음 create로 가도 빈칸 방지)
       if (document.getElementById('options-list').children.length === 0) {
         addOptionField();
         addOptionField();
